--- a/Registrar/Views/Student/Create.cshtml
+++ b/Registrar/Views/Student/Create.cshtml
@@ -13,10 +13,14 @@
             </div>
             <div class="form-group">
                 <label for="course">Select Courses:</label>
-                <select name="course" required>
+                <<select name="course" required>
                     @foreach(var course in Model)
                     {
                         <option value="@course.Id">@course.Name</option>
+<!--                <br>
+                <label>
+                    <input type="checkbox" name="course" value="@course.Id"> @course.Name
+                </label>-->
                     }
                 </select>
             </div>
